[package]
name = "net-utils"
version = "0.1.0"
authors = ["sutr-app"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8" }
bytes = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
command-utils = { git = "https://github.com/sutr-app/command-utils.git", branch = "main" }
memory-utils = { git = "https://github.com/sutr-app/memory-utils.git", branch = "main" }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
futures = "0.3"
http = "1"
once_cell = "1.19"
opentelemetry = { version = "0.30", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
opentelemetry-appender-tracing = { version = "0.30" }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
rand = "0.9"
readability = { version = "0.3" }
regex = "1.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_29"] }
robotstxt = "0.3"
rss = "2.0"
rustls = { version = "0.23", features = ["ring"] } # redis rustls
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_with = "3.0"
strum = "0.27"
strum_macros = "0.27"
thirtyfour = { git = "https://github.com/sutr-app/thirtyfour.git", branch = "main" }
#thirtyfour = { version = "0.34" }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-reflection = { version = "0.14" }
tonic-web = { version = "0.14" }
tokio = { version = "1", features = [
    "full",
    # "macros",
    # "rt-multi-thread",
    # "signal",
    # "sync",
    # "time",
    # "process",
    # "parking_lot",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
    "json",
] }
url = "2"

[dev-dependencies]
itertools = "0.14"
uuid = { version = "1", features = ["v4"] }
